@@ -7,6 +7,6 @@ DIST idea.c.gz 5216 RMD160 e35be5a031d10d52341ac5f029d28f811edd908d SHA1 82fded4
 EBUILD gnupg-1.4.11.ebuild 5481 RMD160 f313bd6a39300f48681784d7b7be23917c098688 SHA1 d7cce6fd980f380ca5eca03bc6d8a826a5f257ea SHA256 19a816ee5e19d8c4b1062fb15bfaef1ad3b3d91659ac24915188732745fe71a7
 EBUILD gnupg-2.0.16-r1.ebuild 3495 RMD160 a9ba552f10b1728440e361d2f00e56f95c663c90 SHA1 f4e22310ee4dd607eb220aa74cfcfd22363902a1 SHA256 71ffb3b17afacd1c13aaedb3621f0f9696be680ee8cb118536d0c4f50bacac8c
 EBUILD gnupg-2.0.16-r2.ebuild 4381 RMD160 72252838891d5cd784505415793c5851323528a8 SHA1 ca13301ab7ae8e022768441d07e9d325180d5b49 SHA256 3a02d9dd2f14ddaaa2d28bdd3da8a790929d42fed8c78ce60362a47a5e7fcfd5
-EBUILD gnupg-2.0.17.ebuild 4238 RMD160 c274e4d8e18e1ebb61ae9c0a658201a5304a7aab SHA1 259bea48a64d05e9ea69f4c3eb52569c955e4afc SHA256 b8121c33a7ac84476be2eb5e22dba0a98d278c8d1cd8a0a0743c0e28e33ca709
-MISC ChangeLog 61229 RMD160 f14d7e2313642246586854bd62fbff4f4d26b6b9 SHA1 8777d37cdb079d86ab95c0f439e3d50d4bcafb26 SHA256 3e479e85194a9f466eed3ad426d7a6e63eca6f0fcce083a423ed96fcf231bb1c
+EBUILD gnupg-2.0.17.ebuild 4248 RMD160 2e576996e3ca256a13250a8d59658de441c694aa SHA1 4bd54c6ddc9d9d9feefa488f717666b6c896646c SHA256 1ef8017b0ad1563c294b97c2b9cd31c0b8f4325b6c8d3a1896a2906d3876f7e1
+MISC ChangeLog 61360 RMD160 87eed8b635233c1f40d790f875de03b8a339c84b SHA1 07380f478c168fb7216a9948f3c11e87c1d1f462 SHA256 4703b0def0de9cd7bc776e3774da81e040553456abab966747a542eec5432e1c
 MISC metadata.xml 698 RMD160 8c3577ffbf64da24c47d181ef24f8f7e9e09a224 SHA1 92579ce4870e7bbee4bf596bb466b3f9ce587157 SHA256 8f18f677d1d437d3033b367e8a7514b745a762d518af7a3afdc44e1ddbf2b31e
